Fix spacing under images
Without jQuery, a previous addclass function was not working. Now
fixed and spacing accounts for captions displayed under images

--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -130,7 +130,6 @@ blockquote {
 pre {
   overflow: auto;
   padding: 15px;
-  margin-bottom: 0;
   font-size: 14px;
   white-space: pre-wrap;
   word-wrap: break-word;
@@ -145,7 +144,8 @@ img,
 
   & + em {
     display: block;
-    margin-top: 15px;
+    margin-top: -25px;
+    margin-bottom: 50px;
     font-size: 14px;
     line-height: 22px;
     font-style: normal;
