--- a/_sass/4-layouts/post.scss
+++ b/_sass/4-layouts/post.scss
@@ -15,7 +15,8 @@
   }
 }
 
-.image-box {
+.post__content p > img,
+.page__content p > img {
   margin: 40px 0;
 }
 
